# zq_match_backend

./: CHANGELOG.md  cookiecutter.json  mkdocs.yml  pyproject.toml
docs/: index.md  usage.md
hooks/: post_gen_project.py  pre_gen_project.py
scripts/: 2_bump_version_and_publish.py
{{cookiecutter.project_slug}}/: .gitignore.template  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  runtests.py
{{cookiecutter.project_slug}}/.github/workflows/: prod-deploy.yml  prod.yml  test.yml
{{cookiecutter.project_slug}}/config/: .env.template
{{cookiecutter.project_slug}}/docker/: docker-compose-prod.yml  docker-compose-test.yml
{{cookiecutter.project_slug}}/docker/django/: Dockerfile  gunicorn_config.py  start-debug.sh  start.sh
{{cookiecutter.project_slug}}/docker/django/celery/beat/: start.sh
{{cookiecutter.project_slug}}/docker/django/celery/flower/: start.sh
{{cookiecutter.project_slug}}/docker/django/celery/worker/: start.sh
{{cookiecutter.project_slug}}/server/: __init__.py  asgi.py  celery.py  urls.py
{{cookiecutter.project_slug}}/server/apps/async_tasks/: apps.py  urls.py  utils.py  views.py
{{cookiecutter.project_slug}}/server/apps/async_tasks/management/commands/: runcelery.py
{{cookiecutter.project_slug}}/server/apps/files/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
{{cookiecutter.project_slug}}/server/apps/oauth/: backends.py  serializers.py  tasks.py  urls.py  utils.py  views.py
{{cookiecutter.project_slug}}/server/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
{{cookiecutter.project_slug}}/server/business/meili/: __init__.py
{{cookiecutter.project_slug}}/server/business/wechat/: __init__.py  wxa.py  wxa_code.py
{{cookiecutter.project_slug}}/server/business/ziqiang/: __init__.py  auth.py
{{cookiecutter.project_slug}}/server/settings/components/: __init__.py  apps.py  caches.py  celery.py  common.py  configs.py  databases.py  django_utils.py  drf.py  logging.py  meili.py  server_url.py  simpleui.py  storage.py  wechat.py  zq_auth.py
{{cookiecutter.project_slug}}/server/settings/environments/: development.py  local.py  production.py  test.py
{{cookiecutter.project_slug}}/server/utils/: logging_handler.py  serializers.py
{{cookiecutter.project_slug}}/server/utils/choices/: types.py
{{cookiecutter.project_slug}}/server/utils/docs/: __init__.py  scheme.py
{{cookiecutter.project_slug}}/tests/: conftest.py
