[tool.poetry]
name = "zq-django-template"
version = "0.1.0"
description = "自强 Studio Django 模板"
authors = ["Nagico <yjr888@vip.qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Nagico/zq-django-template"
documentation = "https://zq-django-template.readthedocs.io/en/latest/"
keywords = ["django", "drf", "template", "cookiecutter"]
packages = [
  { include = "{{cookiecutter.project_name}}" },
  { include = "cookiecutter.json" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
cookiecutter = "^2.1.1"
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.4"
flake8-pyproject = "^1.2.2"
pre-commit = "^2.21.0"
auto-changelog = "^0.6.0"
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.19.1"}

[[tool.poetry.source]]
name = "tsinghua"
default = true
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
skip = ["migrations"]
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
line_length = 80

# not using pytest-cov default, to support pycharm coverage
[tool.pytest.ini_options]
addopts = """
    -s -v
"""

[tool.coverage.run]
omit =[
  '*/migrations/*',
  '*/__version__.py',
  '*/tests/*',
  '*/types.py',
  '*/tests.py',
  '*/setup.py',
  '*/setup.cfg',
  '*/.tox/*',
  '*/.venv/*',
]

[tool.coverage.report]
exclude_lines =[
  'pragma: no cover',
  'def __repr__',
  'if TYPE_CHECKING',
  'raise AssertionError',
  'raise NotImplementedError',
  'if 0:',
  'if __name__ == .__main__.:',
  'class .*\bProtocol\):',
  '@(abc\.)?abstractmethod',
]

[tool.flake8]
ignore = ['E203', 'E266', 'E501', 'W503']
max-line-length = 80
max-complexity = 18
select = ['B', 'C', 'E', 'F', 'W', 'T4']
