[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.email}}>"]
readme = "README.md"

[[tool.poetry.source]]
name = "tsinghua"
default = true
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
django = "^4.1.4"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.13.0"
drf-spectacular = "^0.25.1"
django-filter = "^22.1"
django-simpleui = "^2022.12.18"
mysqlclient = "^2.1.1"
pillow = "^9.3.0"
drf-extensions = "^0.7.1"
django-method-override = "^1.0.4"
pycryptodome = "^3.16.0"
django-split-settings = "^1.2.0"
django-stubs-ext = "^0.7.0"
python-decouple = "^3.6"
loguru = "^0.6.0"
redis = "^4.4.0"
django-extensions = "^3.2.1"
werkzeug = "^2.2.2"
django-cache-url = "^3.4.4"
dj-database-url = "^1.2.0"
hiredis = "^2.1.0"
django-cleanup = "^6.0.0"
django-cacheops = "^6.1"
zq-django-util = "^0.2.0"
zq-auth-sdk = "^0.1.0"
{%- if cookiecutter.use_wechat == 'y' %}
wechatpy = "^1.8.18"
{%- endif %}
{%- if cookiecutter.use_sentry == 'y' %}
sentry-sdk = "^1.12.1"
{%- endif %}
{%- if cookiecutter.use_celery == 'y' %}
celery = "^5.2.7"
django-celery-results = "^2.4.0"
django-celery-beat = "^2.4.0"
flower = "^1.2.0"
{%- endif %}
{%- if cookiecutter.use_meilisearch == 'y' %}
meilisearch = "^0.26.0"
{%- endif %}


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
pytest-mock = "^3.10.0"
model-bakery = "^1.10.1"
pytest-xdist = "^3.2.0"
black = "^22.12.0"
isort = "^5.11.4"
flake8-pyproject = "^1.2.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = "^22.12.0"
isort = "^5.11.4"
django-debug-toolbar = "^3.8.1"
django-querycount = "^0.7.0"
nplusone = "^1.0.0"
ipython = "^8.7.0"
django-migration-linter = "^4.1.0"
django-extra-checks = "^0.13.3"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
pytest-mock = "^3.10.0"
model-bakery = "^1.10.1"
pytest-xdist = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
skip = ["migrations"]
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
line_length = 80

[tool.flake8]
ignore = ['E203', 'E266', 'E501', 'W503']
max-line-length = 80
max-complexity = 18
select = ['B', 'C', 'E', 'F', 'W', 'T4']
